@@ -1,4 +1,3 @@
 joint
-polybinout
 pov
 solids_on_ray
