@@ -1791,124 +1791,6 @@ dl_png(struct bu_list *hdlp, mat_t model2view, fastf_t perspective, vect_t eye_p
     }
 }
 
-static struct bu_structparse polygon_desc[] = {
-    {"%d", 1, "magic", bu_offsetof(struct polygon_header, magic), BU_STRUCTPARSE_FUNC_NULL, NULL, NULL },
-    {"%d", 1, "ident", bu_offsetof(struct polygon_header, ident), BU_STRUCTPARSE_FUNC_NULL, NULL, NULL },
-    {"%d", 1, "interior", bu_offsetof(struct polygon_header, interior), BU_STRUCTPARSE_FUNC_NULL, NULL, NULL },
-    {"%f", 3, "normal", bu_offsetof(struct polygon_header, normal), BU_STRUCTPARSE_FUNC_NULL, NULL, NULL },
-    {"%c", 3, "color", bu_offsetof(struct polygon_header, color), BU_STRUCTPARSE_FUNC_NULL, NULL, NULL },
-    {"%d", 1, "npts", bu_offsetof(struct polygon_header, npts), BU_STRUCTPARSE_FUNC_NULL, NULL, NULL },
-    {"",   0, NULL, 0, BU_STRUCTPARSE_FUNC_NULL, NULL, NULL }
-};
-
-static struct bu_structparse vertex_desc[] = {
-    {"%f", 3, "vertex", 0, BU_STRUCTPARSE_FUNC_NULL, NULL, NULL },
-    {"",   0, (char *)0, 0, BU_STRUCTPARSE_FUNC_NULL, NULL, NULL }
-};
-
-void
-dl_polybinout(struct bu_list *hdlp, struct polygon_header *ph, FILE *fp)
-{
-    int pno = 1;
-
-    struct display_list *gdlp;
-    struct display_list *next_gdlp;
-    struct solid *sp;
-    struct bn_vlist *vp;
-#define MAX_VERTS 10000
-    vect_t verts[MAX_VERTS];
-    struct bu_external obuf;
-
-    gdlp = BU_LIST_NEXT(display_list, hdlp);
-    while (BU_LIST_NOT_HEAD(gdlp, hdlp)) {
-        next_gdlp = BU_LIST_PNEXT(display_list, gdlp);
-
-        FOR_ALL_SOLIDS(sp, &gdlp->dl_headSolid) {
-            for (BU_LIST_FOR(vp, bn_vlist, &(sp->s_vlist))) {
-                int i;
-                int nused = vp->nused;
-                int *cmd = vp->cmd;
-                point_t *pt = vp->pt;
-                for (i = 0; i < nused; i++, cmd++, pt++) {
-                    /* For each polygon, spit it out.  Ignore vectors */
-                    switch (*cmd) {
-                        case BN_VLIST_LINE_MOVE:
-                            /* Move, start line */
-                            break;
-                        case BN_VLIST_LINE_DRAW:
-                            /* Draw line */
-                            break;
-                        case BN_VLIST_POLY_VERTNORM:
-                        case BN_VLIST_TRI_VERTNORM:
-                            /* Ignore per-vertex normal */
-                            break;
-                        case BN_VLIST_POLY_START:
-                        case BN_VLIST_TRI_START:
-                            /* Start poly marker & normal, followed by POLY_MOVE */
-                            ph->magic = POLYGON_HEADER_MAGIC;
-                            ph->ident = pno++;
-                            ph->interior = 0;
-                            memcpy(ph->color, sp->s_basecolor, 3);
-                            ph->npts = 0;
-                            /* Set surface normal (vl_pnt points outward) */
-                            VMOVE(ph->normal, *pt);
-                            break;
-                        case BN_VLIST_POLY_MOVE:
-                        case BN_VLIST_TRI_MOVE:
-                            /* Start of polygon, has first point */
-                            /* fall through to... */
-                        case BN_VLIST_POLY_DRAW:
-                        case BN_VLIST_TRI_DRAW:
-                            /* Polygon Draw */
-                            if (ph->npts >= MAX_VERTS) {
-                                bu_log("excess vertex skipped\n");
-                                break;
-                            }
-                            VMOVE(verts[ph->npts], *pt);
-                            ph->npts++;
-                            break;
-                        case BN_VLIST_POLY_END:
-                        case BN_VLIST_TRI_END:
-                            /*
-                             * End Polygon.  Point given is repeat of
-                             * first one, ignore it.
-                             * XXX note:  if poly_markers was not set,
-                             * XXX poly will end with next POLY_MOVE.
-                             */
-                            if (ph->npts < 3) {
-                                bu_log("polygon with %d points discarded\n", ph->npts);
-                                break;
-                            }
-                            if (bu_struct_export(&obuf, (void *)&ph, polygon_desc) < 0) {
-                                bu_log("header export error\n");
-                                break;
-                            }
-                            if (bu_struct_put(fp, &obuf) != obuf.ext_nbytes) {
-                                perror("bu_struct_put");
-                                break;
-                            }
-                            bu_free_external(&obuf);
-                            /* Now export the vertices */
-                            vertex_desc[0].sp_count = ph->npts * 3;
-                            if (bu_struct_export(&obuf, (void *)verts, vertex_desc) < 0) {
-                                bu_log("vertex export error\n");
-                                break;
-                            }
-                            if (bu_struct_put(fp, &obuf) != obuf.ext_nbytes) {
-                                perror("bu_struct_wrap_buf");
-                                break;
-                            }
-                            bu_free_external(&obuf);
-                            ph->npts = 0;                /* sanity */
-                            break;
-                    }
-                }
-            }
-      }
-
-        gdlp = next_gdlp;
-    }
-}
 
 static void
 ps_draw_header(FILE *fp, char *font, char *title, char *creator, int linewidth, fastf_t scale, int xoffset, int yoffset)
